# todo_app-website

./: README.md
.specify/memory/: constitution.md
backend/: main.py  pyproject.toml  requirements-dev.txt  requirements.txt  test.db
backend/agent/: __init__.py  agent.py  agent_instance.py  todo_agent.py
backend/agent/skills/: __init__.py  base_skill.py  due_date.py  language_detection.py
backend/api/: __init__.py  agent.py  auth.py  tasks.py
backend/src/: database.py
backend/src/models/: task.py  user.py
backend/src/repositories/: task.py  user.py
backend/src/services/: auth.py  task.py
frontend/: index.html  next.config.ts  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
history/adr/: 0001-fullstack-web-app-architecture.md
phase2/: CLAUDE.md  README.md
phase2/backend/: README.md  alembic.ini  pyproject.toml  requirements.txt  run_dev_server.py  test_db_connect.py
phase2/backend/backend_api_data_layer.egg-info/: PKG-INFO
phase2/backend/src/: database.py  main.py  settings.py
phase2/backend/src/api/: auth_routes.py  task_endpoints.py
phase2/backend/src/auth/: dependencies.py
phase2/backend/src/database/: init_db.py
phase2/backend/src/middleware/: auth.py
phase2/backend/src/models/: __init__.py
phase2/backend/src/rbac/models/: role_model.py
phase2/backend/src/utils/: auth.py
phase2/frontend/: package-lock.json  package.json  tsconfig.json
phase3/: ALTERNATIVE_ACCESS.md  FINAL_SOLUTION.md  FIXED_SOLUTION.md  NETWORKING_SOLUTION.md  REDIRECT_SOLUTION.md  SOLUTION.md  TODO_AI_FIXES.md  chat_interface.html  simple_chat_backend.py  simple_chat_interface.html  tasks_page.html  test_api.py  test_connection.html  test_todo_ai.html
phase3/backend/: Dockerfile  requirements.txt  test_api.py
phase3/frontend/: next.config.js  package.json
phase4/backend/: Dockerfile  NETWORK_ERROR_SOLUTION_SUMMARY.md  alembic.ini  test_db.py  (+5 more)
specs/: package-lock.json
src/: main.py
(+263 files in other folders)
