[project]
name = "todo-backend"
version = "0.1.0"
description = "Task Management Backend API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "sqlmodel>=0.0.22",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.20",
    "psycopg[binary,pool]>=3.2.0",
    "asyncpg>=0.0.20",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]